k8s_templates/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: 
spec:
  hosts:
  - 
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    route:
    - destination:
        host: 
        subset: v1
  - route:
    - destination:
        host: 
        subset: v1
